--- a/app/src/main/res/drawable/button_sign_up.xml
+++ b/app/src/main/res/drawable/button_sign_up.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="20dp"></corners>
-    <gradient
-        android:startColor="#2A31AC"
-        android:centerColor="#3943C5"
-        android:endColor="#A7589A"
-        android:angle="360" />
+    <solid android:color="#080d40"></solid>
+    <stroke android:width="1dp" android:color="#ADADAD"></stroke>
 </shape>
