--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -3,12 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/img_bg_login_sign"
     android:orientation="vertical"
     android:layout_height="match_parent"
+
     tools:context=".DangNhapActivity">
 
 
     <EditText
+        android:padding="5dp"
+        android:layout_marginHorizontal="50dp"
+        android:background="@drawable/edittext_custom"
+        android:layout_marginTop="250dp"
+        android:fontFamily="@font/iciel_panton_light"
+        android:textColor="@color/colorWhite"
         android:text="trungbn@gmail.com"
         android:hint="email"
         android:id="@+id/edt_login_email"
@@ -19,6 +27,11 @@
          />
 
     <EditText
+        android:padding="5dp"
+        android:layout_marginVertical="15dp"
+        android:textColor="@color/colorWhite"
+        android:layout_marginHorizontal="50dp"
+        android:background="@drawable/edittext_custom"
         android:text="123456789"
         android:hint="pass"
         android:id="@+id/edt_login_pass"
@@ -28,8 +41,14 @@
         android:inputType="textPassword" />
 
     <Button
+        android:layout_marginHorizontal="50dp"
+        android:textSize="18dp"
+        android:fontFamily="@font/iciel_panton_black"
+        android:textAllCaps="false"
+        android:textColor="@color/colorWhite"
+        android:background="@drawable/button_sign_up"
         android:id="@+id/btn_dang_nhap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Dang nhap" />
+        android:text="Đăng nhập" />
 </LinearLayout>
