--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -5,10 +5,18 @@
     android:id="@+id/ln_dang_ky"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/img_bg_login_sign"
     android:orientation="vertical"
     tools:context=".DangKyActivity">
 
     <EditText
+        android:padding="5dp"
+        android:layout_marginHorizontal="50dp"
+        android:textColorHint="@color/colorWhite"
+        android:background="@drawable/edittext_custom"
+        android:layout_marginTop="250dp"
+        android:fontFamily="@font/iciel_panton_light"
+        android:textColor="@color/colorWhite"
         android:id="@+id/edt_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,40 +25,58 @@
         android:inputType="textPersonName" />
 
     <RadioGroup
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="50dp"
         android:id="@+id/radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <RadioButton
+            android:textColor="@color/colorWhite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nam"></RadioButton>
+            android:text="Male"></RadioButton>
 
         <RadioButton
+            android:textColor="@color/colorWhite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nu"></RadioButton>
+            android:text="Female"></RadioButton>
     </RadioGroup>
 
     <EditText
+        android:textColorHint="@color/colorWhite"
+        android:padding="5dp"
+        android:layout_marginHorizontal="50dp"
+        android:background="@drawable/edittext_custom"
+        android:textColor="@color/colorWhite"
         android:id="@+id/edt_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="email"
         android:inputType="textPersonName"
-        android:text="" />
+        android:text="gmail.com" />
 
     <EditText
+        android:textColorHint="@color/colorWhite"
+        android:padding="5dp"
+        android:layout_marginHorizontal="50dp"
+        android:background="@drawable/edittext_custom"
+        android:textColor="@color/colorWhite"
         android:id="@+id/edt_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="pass"
         android:inputType="textPersonName"
-        android:text="" />
+        android:text="123456789" />
 
     <Button
+        android:textColor="@color/colorWhite"
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="50dp"
+        android:background="@drawable/button_login"
         android:id="@+id/btn_dang_ky"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
