--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,11 +18,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="setting" />
+
+    <Button
+        android:id="@+id/btn_nguoi_ket_noi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nguoi ket noi" />
+
     <com.lorentzos.flingswipe.SwipeFlingAdapterView
         android:id="@+id/frame"
-        android:background="#ffeee9e2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#ffeee9e2"
         app:rotation_degrees="15.5"
         tools:context=".MyActivity" />
 
